tests/fixtures/invalid/operator_eq_mismatch.torel
unit fixtures.operator_eq_mismatch;

export proc main() -> Bool {
    1 == true
}
